--- a/home-event.html
+++ b/home-event.html
@@ -38,7 +38,7 @@
                     <div class="container">
                         <ul class="nav navbar-nav menu-right">
 
-                            <li class="dropdown megamenu"><a class="dropdown-toggle">상담예약<i class="ti-angle-down"></i></a>
+                            <li class="dropdown megamenu"><a class="dropdown-toggle">상담예약</a>
                                 <!-- <ul class="dropdown-menu fullwidth">
                                     <li class="megamenu-content withdesc">
                                         <div class="row">
@@ -87,7 +87,7 @@
                                 </ul> -->
                             </li>
 
-                            <li class="dropdown"><a class="dropdown-toggle">프로그램<i class="ti-angle-down"></i></a>
+                            <li class="dropdown"><a class="dropdown-toggle">프로그램</a>
                                 <!-- <ul class="dropdown-menu">
                                     <li><a href="pages-about-us.html">About Us</a></li>
                                     <li><a href="pages-about-us-two.html">About Us Two</a></li>
@@ -106,7 +106,7 @@
                                 </ul> -->
                             </li>
 
-                            <li class="dropdown megamenu"><a class="dropdown-toggle">스쿨<i class="ti-angle-down"></i></a>
+                            <li class="dropdown megamenu"><a class="dropdown-toggle">스쿨</a>
                                 <!-- <ul class="dropdown-menu fullwidth">
                                     <li class="megamenu-content withdesc">
                                         <div class="row">
@@ -160,7 +160,7 @@
                                 </ul> -->
                             </li>
 
-                            <li class="dropdown megamenu"><a class="dropdown-toggle">뉴스<i class="ti-angle-down"></i></a>
+                            <li class="dropdown megamenu"><a class="dropdown-toggle">뉴스</a>
                                 <!-- <ul class="dropdown-menu fullwidth">
                                     <li class="megamenu-content withdesc">
                                         <div class="row">
@@ -205,7 +205,7 @@
                                 </ul> -->
                             </li>
 
-                            <li class="dropdown"><a class="dropdown-toggle">컨택트 어스<i class="ti-angle-down"></i></a>
+                            <li class="dropdown"><a class="dropdown-toggle">컨택트 어스</a>
                                 <!-- <ul class="dropdown-menu">
                                     <li><a href="blog-standard.html">Blog Standard</a></li>
                                     <li><a href="blog-grid.html">Blog Grid</a></li>
