--- a/home-event.html
+++ b/home-event.html
@@ -230,39 +230,6 @@
                                     <li><a href="shop-checkout.html">Shop Checkout</a></li>
                                 </ul>
                             </li> -->
-
-                            <li class="nav-separator"></li>
-                            <li class="nav-icon"><a class="popup-with-zoom-anim search" href="#search-modal"><i class="flaticon-search"></i> <span class="hidden-md">Search</span></a></li>
-                            <li id="search-modal" class="zoom-anim-dialog mfp-hide"><form><input type="text" id="search-modal-input" placeholder=" Start typing to search..." autocomplete="off"></form></li>
-                            <li class="nav-icon dropdown nav-shop-cart">
-                                <a class="dropdown-toggle"><i class="flaticon-shop"></i><span class="label-items-in-cart">2</span><span class="hidden-md">Your Bag</span></a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <span class="nav-cart-item">
-                                            <img src="img/shop/5.jpg" alt="#">
-                                            <span class="nav-cart-item-info">
-                                                <span>Sparrow Ankle Pants</span>
-                                                <span class="bold">$49.95</span>
-                                            </span>
-                                            <button class="nav-cart-remove"><i class="ion-close"></i></button>
-                                        </span>
-                                        <span class="nav-cart-item">
-                                            <img src="img/shop/3.jpg" alt="#">
-                                            <span class="nav-cart-item-info">
-                                                <span>Jacquelyn Sleeve Top</span>
-                                                <span class="bold">$89.95</span>
-                                            </span>
-                                            <button class="nav-cart-remove"><i class="ion-close"></i></button>
-                                        </span>
-                                        <span class="nav-cart-total">
-                                            <span class="bold">Subtotal:<span class="nav-cart-amount">$139.99</span></span>
-                                            <a href="shop-cart.html" class="btn btn-xs btn-nav-cart">View Cart</a>
-                                            <a href="shop-cart.html" class="btn btn-xs btn-primary btn-nav-checkout">Checkout</a>
-                                        </span>
-                                  </li>
-                                </ul>
-                            </li>
-
                         </ul>
 
                     </div>
@@ -277,10 +244,10 @@
                 <div class="hero-content text-center">
 
                     <div class="col-sm-12 mr-auto white text-center pt120 pt0-xs">
-                        <h5 class="subheading">Get together for epic full day creative event</h5>
-                        <h1 class="large mt20">Join <span class="bold">Wander</span> Meetup</h1>
+                        <h5 class="subheading">K MUSEUM INSTITUTE OF CONTEMPORARY ART</h5>
+                        <h1 class="large mt20"><b>KICA</b></h1>
                         <hr class="separator mb30">
-                        <p class="mb80 mb0-xs">Join us for an incredible day to hear how the brightest minds in industry are using<br>awesomeness to accelerate their creative development strategy.</p>
+                        <p class="mb80 mb0-xs">미술관이 준비하는 유학 프로그램은 접근 방식부터 다릅니다.<br>그 시각의 차이가 귀하의 아이비리그 입학을 가능하게 합니다.</p>
                         <a href="https://www.youtube.com/watch?v=4Wkr0eXiUNw" class="play-btn popup-video hidden-xs"><i class="ti-control-play"></i></a>
                     </div>
 
