--- a/home-event.html
+++ b/home-event.html
@@ -245,7 +245,7 @@
 
                     <div class="col-sm-12 mr-auto white text-center pt120 pt0-xs">
                         <h5 class="subheading">K MUSEUM INSTITUTE OF CONTEMPORARY ART</h5>
-                        <h1 class="large mt20"><b>KICA</b></h1>
+                        <h1 class="large mt20"><span class="bold">KICA</span></h1>
                         <hr class="separator mb30">
                         <p class="mb80 mb0-xs">미술관이 준비하는 유학 프로그램은 접근 방식부터 다릅니다.<br>그 시각의 차이가 귀하의 아이비리그 입학을 가능하게 합니다.</p>
                         <a href="https://www.youtube.com/watch?v=4Wkr0eXiUNw" class="play-btn popup-video hidden-xs"><i class="ti-control-play"></i></a>
