--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <!-- End Header -->
 
         <!-- Page Hero -->
-        <section class="hero-fullscreen parallax bg-event-1">
+        <section class="hero-fullscreen parallax bg-event">
             <div class="hero-container container">
                 <div class="hero-content text-center">
 
@@ -248,7 +248,7 @@
                         <h1 class="large mt20"><span class="bold">KICA</span></h1>
                         <hr class="separator mb30">
                         <p class="mb80 mb0-xs">미술관이 준비하는 유학 프로그램은 접근 방식부터 다릅니다.<br>그 시각의 차이가 귀하의 아이비리그 입학을 가능하게 합니다.</p>
-                        <a href="https://www.youtube.com/watch?v=4Wkr0eXiUNw" class="play-btn popup-video hidden-xs"><i class="ti-control-play"></i></a>
+                        <a href="https://www.youtube.com/watch?v=vw0Sle9d6v4" class="play-btn popup-video hidden-xs"><i class="ti-control-play"></i></a>
                     </div>
 
                 </div>
@@ -297,6 +297,50 @@
             </div>
         </section>
         <!-- End About -->
+
+        <section class="p0">
+            <div class="container-fluid">
+                <div class="row">
+
+                    <div class="portfolio-no-gutter-fullwidth cbp" id="js-grid-no-gutter">
+                        <div class="cbp-item print branding">
+                            <div class="cbp-caption-defaultWrap">
+                                <img src="img/portfolio/grid/1.jpg" alt="#">
+                            </div>
+                        </div>
+                        <div class="cbp-item web-design graphic">
+                            <div class="cbp-caption-defaultWrap">
+                                <img src="img/portfolio/grid/2.jpg" alt="#">
+                            </div>
+                        </div>
+                        <div class="cbp-item print branding">
+                            <div class="cbp-caption-defaultWrap">
+                                <img src="img/portfolio/grid/3.jpg" alt="#">
+                            </div>
+                        </div>
+                        <div class="cbp-item print branding">
+                            <div class="cbp-caption-defaultWrap">
+                                <img src="img/portfolio/grid/4.jpg" alt="#">
+                            </div>
+                        </div>
+                        <div class="cbp-item print graphic">
+                            <div class="cbp-caption-defaultWrap">
+                                <img src="img/portfolio/grid/5.jpg" alt="#">
+                            </div>
+                        </div>
+                        <div class="cbp-item print branding">
+                            <div class="cbp-caption-defaultWrap">
+                                <img src="img/portfolio/grid/8.jpg" alt="#">
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- End Portfolio -->
+
 
         <!-- Speakers -->
         <section class="pt130 pb120">
