--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                         <h1 class="large mt20"><span class="bold">KICA</span></h1>
                         <hr class="separator mb30">
                         <p class="mb80 mb0-xs">미술관이 준비하는 유학 프로그램은 접근 방식부터 다릅니다.<br>그 시각의 차이가 귀하의 아이비리그 입학을 가능하게 합니다.</p>
-                        <a href="https://www.youtube.com/watch?v=vw0Sle9d6v4" class="play-btn popup-video hidden-xs"><i class="ti-control-play"></i></a>
+                        <a href="https://youtu.be/yJE7m0VB9oo" class="play-btn popup-video hidden-xs"><i class="ti-control-play"></i></a>
                     </div>
 
                 </div>
@@ -262,30 +262,23 @@
                 <div class="row">
 
                     <div class="col-md-8 mr-auto text-center">
-                        <h2>About Meetup</h2>
+                        <h2>상담 문의</h2>
                         <hr class="separator">
                         <div class="icon-tabs-centered">
 
                             <ul id="iconTabs" class="nav nav-tabs nav-tabs-center">
-                                <li class="active"><a href="#tab-i1" data-toggle="tab"><span class="icon-tab ion-ios-flask-outline"></span><span>Multiple events</span></a></li>
-                                <li class=""><a href="#tab-i2" data-toggle="tab"><span class="icon-tab ion-ios-bolt-outline"></span><span>Workshops</span></a></li>
-                                <li class=""><a href="#tab-i3" data-toggle="tab"><span class="icon-tab ion-ios-infinite-outline"></span><span>Getting Here</span></a></li>
-                                <li class=""><a href="#tab-i4" data-toggle="tab"><span class="icon-tab ion-ios-mic-outline"></span><span>Event People</span></a></li>
+                                <li class="active"><a href="#tab-i1" data-toggle="tab"><span class="icon-tab ion-ios-flask-outline"></span><span>000-000-0000 / ASDF@GMAIL.COM</span></a></li>
                             </ul>
-
+                            <div class="col-sm-12 mr-auto text-center">
+                                <a href="#" class="btn btn-primary btn-lg btn-appear mt20 mb20" style="font-size:16px"><span>신청하기 <i class="ion-android-arrow-forward"></i></span></a>
+                            </div>
                             <div id="myTabContent" class="tab-content">
 
                                 <div class="tab-pane fade active in" id="tab-i1">
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores.</p>
-                                </div>
-                                <div class="tab-pane fade" id="tab-i2">
-                                    <p>Sed scelerisque urna id scelerisque tincidunt. Sed scelerisque laoreet dolor sed aliquam. Duis at eros vehicula, sollicitudin magna elementum, pretium diam. Vivamus bibendum fringilla mauris et rhoncus. Phasellus mattis egestas risus ac tempor. Nam dapibus sodales ornare. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
-                                </div>
-                                <div class="tab-pane fade" id="tab-i3">
-                                    <p>Sed scelerisque urna id scelerisque tincidunt. Sed scelerisque laoreet dolor sed aliquam. Duis at eros vehicula, sollicitudin magna elementum, pretium diam. Vivamus bibendum fringilla mauris et rhoncus. Phasellus mattis egestas risus ac tempor. Nam dapibus sodales ornare.</p>
-                                </div>
-                                <div class="tab-pane fade" id="tab-i4">
-                                    <p>Sed scelerisque urna id scelerisque tincidunt. Sed scelerisque laoreet dolor sed aliquam. Duis at eros vehicula, sollicitudin magna elementum, pretium diam. Vivamus bibendum fringilla mauris et rhoncus. Sed scelerisque urna id scelerisque tincidunt. Phasellus mattis egestas risus ac tempor. Nam dapibus sodales ornare.</p>
+                                  <p>최상위 대학교의 입학 전략은 타 예술 대학교와 다릅니다.</p>
+                                  <p>일반적으로 경험할 수 없는 미술관 활동(예술 활동)은 입학의 전략입니다.</p>
+                                  <p>본 미술관은 평생교육기관으로서 학생 한 명, 한 명을 면밀하고 다각적으로 분석하여
+                                  <p>합격의 지름길로 안내합니다.</p>
                                 </div>
 
                             </div>
@@ -330,7 +323,7 @@
                         </div>
                         <div class="cbp-item print branding">
                             <div class="cbp-caption-defaultWrap">
-                                <img src="img/portfolio/grid/8.jpg" alt="#">
+                                <img src="img/portfolio/grid/6.jpg" alt="#">
                             </div>
                         </div>
 
