--- a/index.html
+++ b/index.html
@@ -247,7 +247,8 @@
                         <h5 class="subheading">K MUSEUM INSTITUTE OF CONTEMPORARY ART</h5>
                         <h1 class="large mt20"><span class="bold">KICA</span></h1>
                         <hr class="separator mb30">
-                        <p class="mb80 mb0-xs">미술관이 준비하는 유학 프로그램은 접근 방식부터 다릅니다.<br>그 시각의 차이가 귀하의 아이비리그 입학을 가능하게 합니다.</p>
+                        <h4 class="mb20 mb0-xs">미술관이 준비하는 유학 프로그램은 접근 방식부터 다릅니다.</h4>
+                        <h4 class="mb80 mb0-xs">그 시각의 차이가 귀하의 아이비리그 입학을 가능하게 합니다.</h4>
                         <a href="https://youtu.be/yJE7m0VB9oo" class="play-btn popup-video hidden-xs"><i class="ti-control-play"></i></a>
                     </div>
 
@@ -267,14 +268,14 @@
                         <div class="icon-tabs-centered">
 
                             <ul id="iconTabs" class="nav nav-tabs nav-tabs-center">
-                                <li class="active"><a href="#tab-i1" data-toggle="tab"><span class="icon-tab ion-ios-flask-outline"></span><span>000-000-0000 / ASDF@GMAIL.COM</span></a></li>
+                                <li class="active"><a href="#tab-i1" data-toggle="tab"><span>000-000-0000 / <br>ASDF@GMAIL.COM</span></a></li>
                             </ul>
                             <div class="col-sm-12 mr-auto text-center">
-                                <a href="#" class="btn btn-primary btn-lg btn-appear mt20 mb20" style="font-size:16px"><span>신청하기 <i class="ion-android-arrow-forward"></i></span></a>
+                                <a href="#" class="btn btn-primary btn-lg btn-appear mt20 mb20" style="font-size:16px;font-weight: bold;"><span>신청하기<i class="ion-android-arrow-forward"></i></span></a>
                             </div>
                             <div id="myTabContent" class="tab-content">
 
-                                <div class="tab-pane fade active in" id="tab-i1">
+                                <div class="tab-pane fade active in" id="tab-i1" style="font-size:16px;!important">
                                   <p>최상위 대학교의 입학 전략은 타 예술 대학교와 다릅니다.</p>
                                   <p>일반적으로 경험할 수 없는 미술관 활동(예술 활동)은 입학의 전략입니다.</p>
                                   <p>본 미술관은 평생교육기관으로서 학생 한 명, 한 명을 면밀하고 다각적으로 분석하여
