--- a/index.html
+++ b/index.html
@@ -342,9 +342,9 @@
                 <div class="row">
 
                     <div class="col-md-12 section-heading">
-                        <h2>Panel of Speakers</h2>
+                        <h2>강사진</h2>
                         <hr class="separator">
-                        <p>We create experiences that transform brands, grow businesses and make clients happy.<br> Working on big challenges in honest collaboration with our clients.</p>
+                        <p>아이비리그 출신의 국내외 유명 작가, 국내외 다수의 예술상 입상자 및 국내외 유명 갤러리 소속 작가.</p>
                     </div>
 
                     <div class="team-slider owl-carousel dark-pagination event-speakers">
@@ -353,148 +353,57 @@
                                 <div class="team-image">
                                     <img src="img/team/1.jpg" class="img-responsive" alt="" />
                                 </div>
-                                <div class="team-caption">
-                                    <div>
-                                        <div>
-                                            <ul>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-facebook"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-twitter"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-youtube"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
+
                             </div>
-                            <h4>John Westbrook</h4>
-                            <p>Senior Web Developer</p>
+                            <h4>박철수</h4>
+                            <p>원장</p>
                         </div>
                         <div class="team">
                             <div class="team-container">
                                 <div class="team-image">
                                     <img src="img/team/2.jpg" class="img-responsive" alt="" />
                                 </div>
-                                <div class="team-caption">
-                                    <div>
-                                        <div>
-                                            <ul>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-facebook"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-twitter"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-youtube"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-linkedin"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
-                            <h4>Kelly Swanson</h4>
-                            <p>Marketing Manager</p>
+                            <h4>김나영</h4>
+                            <p>부원장</p>
                         </div>
                         <div class="team">
                             <div class="team-container">
                                 <div class="team-image">
                                     <img src="img/team/3.jpg" class="img-responsive" alt="" />
                                 </div>
-                                <div class="team-caption">
-                                    <div>
-                                        <div>
-                                            <ul>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-facebook"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-twitter"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-youtube"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-dribbble"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-linkedin"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
-                            <h4>Chris Holland</h4>
-                            <p>Motion Graphics</p>
+                            <h4>박민지</h4>
+                            <p>강사</p>
                         </div>
                         <div class="team">
                             <div class="team-container">
                                 <div class="team-image">
                                     <img src="img/team/4.jpg" class="img-responsive" alt="" />
                                 </div>
-                                <div class="team-caption">
-                                    <div>
-                                        <div>
-                                            <ul>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-facebook"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-twitter"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-youtube"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
-                            <h4>Dave Harper</h4>
-                            <p>Lead Designer</p>
+                            <h4>김수현</h4>
+                            <p>강사</p>
                         </div>
                         <div class="team">
                             <div class="team-container">
                                 <div class="team-image">
                                     <img src="img/team/5.jpg" class="img-responsive" alt="" />
                                 </div>
-                                <div class="team-caption">
-                                    <div>
-                                        <div>
-                                            <ul>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-facebook"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-twitter"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-youtube"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-linkedin"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
-                            <h4>Tracey Mathis</h4>
-                            <p>Graphic Designer</p>
+                            <h4>박재욱</h4>
+                            <p>강사</p>
                         </div>
                         <div class="team">
                             <div class="team-container">
                                 <div class="team-image">
                                     <img src="img/team/6.jpg" class="img-responsive" alt="" />
                                 </div>
-                                <div class="team-caption">
-                                    <div>
-                                        <div>
-                                            <ul>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-facebook"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-twitter"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-youtube"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-dribbble"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-linkedin"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
-                            <h4>William Beck</h4>
-                            <p>Web Developer</p>
+                            <h4>김설희</h4>
+                            <p>강사</p>
                         </div>
-                        <div class="team">
-                            <div class="team-container">
-                                <div class="team-image">
-                                    <img src="img/team/7.jpg" class="img-responsive" alt="" />
-                                </div>
-                                <div class="team-caption">
-                                    <div>
-                                        <div>
-                                            <ul>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-facebook"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-twitter"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-youtube"></i></a></li>
-                                                <li class="social-icon"><a href="#"><i class="ion-social-dribbble"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <h4>Steven Griffin</h4>
-                            <p>Marketing Manager</p>
-                        </div>
+
                     </div>
 
                 </div>
