--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         <!-- End Speakers -->
 
         <!-- Testimonials -->
-        <section class="parallax bg-app-4">
+        <section class="parallax bg-app">
             <div class="container">
                 <div class="row">
 
@@ -420,26 +420,17 @@
                         <div class="testimonials white owl-carousel">
 
                             <div>
-                                <i class="vossen-quote color"></i>
-                                <h4>This guys are amazing! They were so quick to respond and let me tell you, they are all knowing! I highly<br />recommend their themes! They are all about making their clients happy!</h4>
-                                <h5 class="subheading">Jack Westbrook</h5>
-                                <p>Web Developer</p>
+                                <h2 class="mb10">포트폴리오 완성 과정<br>(여름방학 Intensive 과정)</h2>
+                                <p>특별한 포트폴리오(독보적인 경쟁력 확보) 아이비리그 출신의 국내외 저명한 작가들이 직접 교육하는 포트폴리오 수업</p>
                             </div>
-
                             <div>
-                                <i class="vossen-quote color"></i>
-                                <h4>I have purchased tens of templates from ThemeForest and this one is undoubtedly the best I ever tried.<br />Easy to edit, nicely coded. You guys, you did a great job here!</h4>
-                                <h5 class="subheading">Lindsay Swanson</h5>
-                                <a href="#">Wunderkind Inc</a>
+                                <h2 class="mb10">EIP (EXIBITION INSIDER PROGRAM)</h2>
+                                <p>KMCA 에서만 가능한 대외활동, EIP 대외활동 전시회를 직접 기획하고, 작가로 출품할 수 있는 특별한 활동을 제공합니다.</p>
                             </div>
-
                             <div>
-                                <i class="vossen-quote color"></i>
-                                <h4>This is one of the best themes that I bought on ThemeForest. It is well documented and well coded but<br />the best of all is the friendly and quick support behind.</h4>
-                                <h5 class="subheading">Jared Jackson</h5>
-                                <p>App Developer</p>
+                                <h2 class="mb10">입학 이후 관리</h2>
+                                <p>우리 학생이 동시대의 예술작가로 데뷔하게 됩니다. 단순히 입학까지가 목표가 아닌 입학 이후의 학과 과정의 모든 전반적인 설계를 도와드립니다. 입학 후 방학시즌에 미술관에서 실시하는 인턴쉽, 도슨트 프로그램을 통해 활발한 직업 활동의 기회를 드립니다. 이는 향후 졸업 이후의 인생의 방향까지 설계 및 책임을 지고자 합니다.</p>
                             </div>
-
                         </div>
                     </div>
 
