--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
                     <div class="col-sm-12 mr-auto white text-center pt120 pt0-xs">
                         <h5 class="subheading">K MUSEUM INSTITUTE OF CONTEMPORARY ART</h5>
-                        <h1 class="large mt20"><span class="bold">KICA</span></h1>
+                        <h1 class="large mt20 mb20"><span class="bold">KICA</span></h1>
                         <hr class="separator mb30">
                         <h4 class="mb20 mb0-xs">미술관이 준비하는 유학 프로그램은 접근 방식부터 다릅니다.</h4>
                         <h4 class="mb80 mb0-xs">그 시각의 차이가 귀하의 아이비리그 입학을 가능하게 합니다.</h4>
@@ -418,7 +418,8 @@
                     <div class="col-md-10 mr-auto">
                         <div class="testimonials white owl-carousel">
                             <div>
-                                <h2 class="mb10">포트폴리오 완성 과정<br>(여름방학 Intensive 과정)</h2>
+                                <h2 class="mb10">포트폴리오 완성 과정</h2>
+                                <h3>(여름방학 Intensive 과정)</h3>
                                 <p>특별한 포트폴리오(독보적인 경쟁력 확보) 아이비리그 출신의 국내외 저명한 작가들이 직접 교육하는 포트폴리오 수업</p>
                             </div>
                             <div>
