--- a/index.html
+++ b/index.html
@@ -444,31 +444,22 @@
             <div class="footer-columns">
                 <div class="container">
                     <div class="row">
-
                         <div class="col-md-3">
-                            <h4 class="subheading">About Us</h4>
-                            <p>We are a digital studio offering a variety of solutions in product development, mobile and visual design. Nam metus, tellus id pellentesque feugiat, sem sem cursus orci, a placerat ante ante nec massa. Nam molestie, tellus id pellentesque feugiat.</p>
+                          <img src="img/assets/logo-white.png" class="logo-light" alt="#">
                         </div>
-
+                        <div class="col-md-3"></div>
                         <div class="col-md-3">
-                            <h4 class="subheading">Recent Posts</h4>
-                            <ul class="footer-recent-posts">
-                                <li><a href="blog-post-carousel.html">Branding Inspiration From Wander</a><span class="recent-post-date">June 4, 2015</span></li>
-                                <li><a href="blog-post-video.html">Final Kickstarter Week - Vote for Cover</a><span class="recent-post-date">June 4, 2015</span></li>
-                                <li><a href="blog-grid.html">Awesome Guide to Perfect Posts</a><span class="recent-post-date">June 4, 2015</span></li>
-                            </ul>
+                            <h4 class="subheading">K현대미술관</h4>
+                            <p>서울특별시 강남구 선릉로 807 (신사동 666-7)</p>
+                            <p>+82.2-2138-0952~3</p>
+                            <p>http://kmcaseoul.org/</p>
                         </div>
-
                         <div class="col-md-3">
-                            <h4 class="subheading">Latest Tweets</h4>
-                            <div id="twitter-feed" data-twitter-widget-id="455427632419442688"></div>
+                            <h4 class="subheading">K Museum of Contemporary Art</h4>
+                            <p>807 Seonneung-ro, Gangnam-gu, Seoul, Korea</p>
+                            <p>+82.2-2138-0952~3</p>
+                            <p>http://kmcaseoul.org/</p>
                         </div>
-
-                        <div class="col-md-3">
-                            <h4 class="subheading">Instagram</h4>
-                            <div id="instagram-feed" data-instagram-username="vossen_inc"><ul></ul></div>
-                        </div>
-
                     </div>
                 </div>
             </div>
@@ -478,15 +469,13 @@
                     <div class="row">
 
                         <div class="col-md-6 col-sm-12">
-                            <p>© 2016 <a href="index.html" class="logo">Vossen</a> All Rights Reserved. </p>
+                            <p>© 2019 <a href="index.html" class="logo">KICA</a> All Rights Reserved. </p>
                         </div>
                         <div class="col-md-6 col-sm-12">
                             <ul class="social-icons">
                                 <li><a href="#"><i class="icon ion-social-facebook"></i></a></li>
-                                <li><a href="#"><i class="icon ion-social-twitter"></i></a></li>
-                                <li><a href="#"><i class="icon ion-social-pinterest"></i></a></li>
-                                <li><a href="#"><i class="icon ion-social-linkedin"></i></a></li>
                                 <li><a href="#"><i class="icon ion-social-youtube"></i></a></li>
+                                <li><a href="#"><i class="icon ion-social-instagram"></i></a></li>
                             </ul>
                         </div>
                     </div>
