--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                         <hr class="separator mb30">
                         <h4 class="mb20 mb0-xs">미술관이 준비하는 유학 프로그램은 접근 방식부터 다릅니다.</h4>
                         <h4 class="mb80 mb0-xs">그 시각의 차이가 귀하의 아이비리그 입학을 가능하게 합니다.</h4>
-                        <a href="https://youtu.be/yJE7m0VB9oo" class="play-btn popup-video hidden-xs"><i class="ti-control-play"></i></a>
+                        <a href="https://www.youtube.com/watch?v=yJE7m0VB9oo&feature=youtu.be" class="play-btn popup-video hidden-xs"><i class="ti-control-play"></i></a>
                     </div>
 
                 </div>
@@ -266,13 +266,13 @@
                         <h2>상담 문의</h2>
                         <hr class="separator">
                         <div class="icon-tabs-centered">
-
+                          <div class="col-sm-12 mr-auto text-center">
+                              <a href="#" class="btn btn-primary btn-lg btn-appear mt20 mb20" style="font-size:16px;font-weight: bold;"><span>신청하기<i class="ion-android-arrow-forward"></i></span></a>
+                          </div>
                             <ul id="iconTabs" class="nav nav-tabs nav-tabs-center">
-                                <li class="active"><a href="#tab-i1" data-toggle="tab"><span>000-000-0000 / <br>ASDF@GMAIL.COM</span></a></li>
+                                <li class="active"><a href="#tab-i1" data-toggle="tab"><span>000-000-0000<br>ASDF@GMAIL.COM</span></a></li>
                             </ul>
-                            <div class="col-sm-12 mr-auto text-center">
-                                <a href="#" class="btn btn-primary btn-lg btn-appear mt20 mb20" style="font-size:16px;font-weight: bold;"><span>신청하기<i class="ion-android-arrow-forward"></i></span></a>
-                            </div>
+
                             <div id="myTabContent" class="tab-content">
 
                                 <div class="tab-pane fade active in" id="tab-i1" style="font-size:16px;!important">
