--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Wander - Multipurpose HTML Template</title>
+        <title>KICA SEOUL</title>
         <link href="img/assets/favicon.png" rel="icon" type="image/png">
         <link href="css/plugins.css" rel="stylesheet" type="text/css">
         <link href="css/theme.css" rel="stylesheet" type="text/css">
@@ -249,7 +249,7 @@
                         <hr class="separator mb30">
                         <h4 class="mb20 mb0-xs">미술관이 준비하는 유학 프로그램은 접근 방식부터 다릅니다.</h4>
                         <h4 class="mb80 mb0-xs">그 시각의 차이가 귀하의 아이비리그 입학을 가능하게 합니다.</h4>
-                        <a href="https://www.youtube.com/watch?v=yJE7m0VB9oo&feature=youtu.be" class="play-btn popup-video hidden-xs"><i class="ti-control-play"></i></a>
+                        <a href="https://www.youtube.com/watch?v=yJE7m0VB9oo" class="play-btn popup-video hidden-xs"><i class="ti-control-play"></i></a>
                     </div>
 
                 </div>
