--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                             <li class=""><a href="#request" >상담 문의</a></li>
                             <li class=""><a href="#team" >강사진</a></li>
                             <li class=""><a href="#contact-us" >CONTACT US</a></li>
+                            <li class="nav-separator"></li>
                             <li class=""><a href="" >KR</a></li>
                             <li class=""><a href="" >EN</a></li>
                             <li class=""><a href="" >CN</a></li>
